--- a/build.gradle
+++ b/build.gradle
@@ -9,7 +9,8 @@ task wrapper(type: Wrapper) {
 apply plugin: 'groovy'
 apply plugin: 'java'
 
-sourceCompatibility = 1.5
+sourceCompatibility = 1.8
+targetCompatibility = 1.8
 
 repositories {
     jcenter()
