--- a/build.gradle
+++ b/build.gradle
@@ -20,6 +20,7 @@ dependencies {
     testCompile 'org.codehaus.groovy:groovy-all:2.3.11'
     testCompile 'org.spockframework:spock-core:1.1-groovy-2.4-rc-2'
     testCompile group: 'junit', name: 'junit', version: '4.11'
+    testCompile 'com.blogspot.toomuchcoding:spock-subjects-collaborators-extension:1.2.1'
 }
 
 sourceSets {
@@ -34,7 +35,7 @@ sourceSets {
 
     test {
         groovy {
-            srcDirs = ['/src/test/groovy']
+            srcDirs = ['src/test/groovy']
         }
     }
 }
